--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -111,14 +111,18 @@ $(document).ready(function(){
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="collapsibleNavbar">
-            <ul class="navbar-nav">
+            <ul class="navbar-nav me-auto">
 
                 {% for c in categories %}
                 <li class="nav-item">
-                    <a class="nav-link" href="#">{{c.name}}</a>
+                    <a class="nav-link" href="/?cate_id={{c.id}}">{{c.name}}</a>
                 </li>
                 {% endfor %}
             </ul>
+            <form class="d-flex" method="get" action="/">
+                <input class="form-control me-2" type="text" name="q" placeholder="Nhap tu khoa">
+                <button class="btn btn-primary" type="submit">Tim</button>
+            </form>
         </div>
     </div>
 </nav>
