--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -3,8 +3,17 @@
 {% block title %}Trang chủ{% endblock %}
 
 {% block content %}
-
+{% if pages > 1%}
+    <nav aria-label="Page navigation example">
+      <ul class="pagination">
+          {% for i in range(1, pages + 1) %}
+              <li class="page-item"><a class="page-link" href="/?page={{ i }}">{{i}}</a></li>
+          {% endfor %}
+      </ul>
+    </nav>
+{% endif %}
 <div class="row">
+
     {% for p in prod %}
     <div class="col-md-3 col-12" style="padding:0.7rem;">
         <div class="card">
@@ -17,7 +26,9 @@
             </div>
         </div>
     </div>
+
     {% endfor %}
+
 </div>
 
 {% endblock %}
